# sneaky-vaccine-nn

./: .gitignore  README.md  pyproject.toml
src/: exec_local_model.py  exec_triton_model.py  triton_api.py
src/nn_train/: train_config.yaml  train_lightning.py
src/nn_train/datasets/: Ldataset.py  dataset.py
src/nn_train/models/: simple_cnn_model.py
src/utils/: __init__.py  constant.py  transform.py
src/vision_utils/: __init__.py  arcface_onnx.py  attribute.py  get_model.py  get_onnx_model.py  image_handler.py  model_converter.py  retinaface.py
triton/models/retina/: config.pbtxt
