[project]
name = "sneaky-vaccine-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aio-pika>=9.5.5",
    "black>=25.9.0",
    "isort>=7.0.0",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.1.1",
    "scikit-image>=0.25.2",
]
